--- a/MVCwebapp/Views/Shared/_Layout.cshtml
+++ b/MVCwebapp/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                             <a class="nav-link fw-semibold text-dark" asp-controller="User"  asp-action="Create">User</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fw-semibold text-dark" asp-controller="Image"  asp-action="Create">Add Image</a>
+                            <a class="nav-link fw-semibold text-dark" asp-controller="Image"  asp-action="Create">Upload Image</a>
                         </li>
                     </ul>
                 </div>
